fix(payment): preserve monetary invariants across currencies